--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   "author": "박선영 <sunsmile01023@gmail.com>",
   "license": "MIT",
   "scripts": {
-    
-    "start": "node index.js",
-    "prestart": "tsc"
+    "start": "tsc-watch --onSuccess \"node dist/index.js\" "
+  },
+  "devDependencies": {
+    "tsc-watch": "^4.0.0"
+  },
+  "dependencies": {
+    "typescript": "^3.6.4"
   }
 }
